--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body bgcolor="#F5DBDB">
         <!-- banner-->
-    <img src="img/banner.png" alt="">
+    <div align="center">
+    <img img/banner.png" alt="">
+    </div>                                              
         <!-- menu -->
     <div >
         <center>
