--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body bgcolor="#F5DBDB">
         <!-- banner-->
-    <div align="center">
-    <img img/banner.png" alt="">
-    </div>                                              
+    <center>
+    <img img/banner.png" alt="banner do site - Verdinhas">
+    </center>                                              
         <!-- menu -->
     <div >
         <center>
