--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VERDINHAS</title>
-</head>
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
+    <title>VERDINHAS</title>
+</head>
 
 <body bgcolor="#dbedc2">
         <!-- banner-->
     <center>
-    <img src="img/banner.png" alt="banner do site - Verdinhas">
+    <div class="banner">
+      <h1>VERDINHAS</h1>
+    </div>
     </center>                                              
         <!-- menu -->
     <div >
