--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 
 <body bgcolor="#dbedc2">
         <!-- banner-->
-    <center>
     <div class="banner">
-      <h1>VERDINHAS</h1>
+      <h2 class="h2-banner">VERDINHAS</h2>
     </div>
-    </center>                                              
+                                                
         <!-- menu -->
     <div >
         <center>
